--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon server.js",
-    "tailwind": "tailwindcss -i ./src/styles.css -o ./public/styles.css --watch"
+    "tailwind": "tailwindcss -i ./src/styles.css -o ./public/styles.css --watch",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
